--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,12 @@
-<div id="box" style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px; background-color: red;"></div>
+<style>
+    .box {
+    width: 10px;
+    height: 10px;
+    /* 其他样式属性 */
+    position: absolute;
+    }
+</style>
+<div id="container">
+    <div id="box" style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px; background-color: red;"></div>
+</div>
 <script src="move.js"></script>
