full stack ws code update(client init, list, move)

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,13 @@
     /* 其他样式属性 */
     position: absolute;
     }
+    .newBox {
+    width: 10px;
+    height: 10px;
+    /* 其他样式属性 */
+    position: absolute;
+    }
 </style>
 <div id="container">
-    <div id="box" style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px; background-color: red;"></div>
 </div>
-<script src="move.js"></script>
+<script src="/public/move.js"></script>
