--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
 </style>
 <div id="container">
 </div>
-<script src="/public/move.js"></script>
+<script src="move.js"></script>
+<!-- <script src="/public/move.js"></script> -->
