ブロックの位置調整

--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,18 @@
             height: 60px;
             background-color: rgb(208, 106, 4); /* 或者设置其他背景颜色 */
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 420px;
+            left: 470px;
             z-index: 50;
-            transform: translate(-50%, -50%);
         }
         #container .table_area {
             width: 90px;
             height: 100px;
             background-color: rgb(180, 171, 171); /* 或者设置其他背景颜色 */
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 400px;
+            left: 450px;
             z-index: 40;
-            transform: translate(-50%, -50%);
         }
         .box {
             width: 10px;
