websocket life cycle 完成

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             left: 450px;
             z-index: 0;
         }
-        .box {
+        .myBox {
             width: 10px;
             height: 10px;
             /* 其他样式属性 */
