--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,49 @@
-<style>
-    .box {
-    width: 10px;
-    height: 10px;
-    /* 其他样式属性 */
-    position: absolute;
-    }
-    .newBox {
-    width: 10px;
-    height: 10px;
-    /* 其他样式属性 */
-    position: absolute;
-    }
-</style>
-<div id="container">
-</div>
-<script src="move.js"></script>
-<!-- <script src="/public/move.js"></script> -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <style>
+        #container .table {
+            width: 50px;
+            height: 60px;
+            background-color: rgb(208, 106, 4); /* 或者设置其他背景颜色 */
+            position: absolute;
+            top: 420px;
+            left: 470px;
+            z-index: 5;
+        }
+        #container .table_area {
+            width: 90px;
+            height: 100px;
+            background-color: rgb(180, 171, 171); /* 或者设置其他背景颜色 */
+            position: absolute;
+            top: 400px;
+            left: 450px;
+            z-index: 0;
+        }
+        .myBox {
+            width: 10px;
+            height: 10px;
+            /* 其他样式属性 */
+            position: absolute;
+        }
+
+        .newBox {
+            width: 10px;
+            height: 10px;
+            /* 其他样式属性 */
+            position: absolute;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="container">
+        <div class="table"></div>
+        <div class="table_area"></div>
+    </div>
+    <!-- <script src="/public/move.js"></script> -->
+    <script src="move.js"></script>
+</body>
+
+</html>
