8282にポートを変える

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@
         <div class="table_area"></div>
     </div>
     <!-- <script src="/public/move.js"></script> -->
-    <script src="move.js"></script>
+    <!-- <script src="move.js"></script> -->
+    <script src="move2.js"></script>
+
 </body>
 
 </html>
