--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         body {
             margin: 0%;
             padding: 0%;
+            opacity: 0;
+            transition: opacity 1s;
         }
 
         img {
@@ -98,6 +100,15 @@
     <div id="room"></div>
     <script src="/public/move.js"></script>
     <script src="/public/door.js"></script>
+    <script>
+        window.addEventListener("load", function () {
+            var elements = document.body;
+            console.log("hjosafgnkdjnkfgosjnkokfsjnbkagnlasfgasfgnswNGFsl'i'osrnfierwhn");
+            elements.style.transitionDelay = 0.2 + "s";
+            elements.style.opacity = 1;
+        });
+
+    </script>
     <!-- <script src="move.js"></script> -->
 </body>
 
