--- a/public/public/index.html
+++ b/public/public/index.html
@@ -67,8 +67,8 @@
         #room {
             position: absolute;
             /* 追加 */
-            background-image: url(/img/bar-door.png);
-            /* background-image: url(/public/img/bar-door.png); */
+            /* background-image: url(/img/bar-door.png); */
+            background-image: url(/public/img/bar-door.png);
             width: 84px;
             height: 84px;
             left: 714px;
@@ -78,24 +78,13 @@
         #bar {
             position: absolute;
             /* 追加 */
-            background-image: url(/img/bar-door.png);
-            /* background-image: url(/public/img/bar-door.png); */
+            /* background-image: url(/img/bar-door.png); */
+            background-image: url(/public/img/bar-door.png);
             width: 84px;
             height: 84px;
             left: 66px;
             top: 66px;
             opacity: 0;
-        }
-        #remote-media-area {
-            position: absolute;
-            display: flex;
-
-            width: 84px;
-            height: 84px;
-            left: 66px;
-            top: 66px;
-            margin-left: 100px;
-
         }
     </style>
 </head>
@@ -129,7 +118,7 @@
     </div>
 
     <div id="remote-media-area"></div>
-    <video id="local-video" width="10px" height="" muted playsinline pos></video>
+    <video id="local-video" width="400px" muted playsinline></video>
     <!-- ////////////////////////////s -->
 
 
