--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,10 @@
     </div>
 
     <div id="remote-media-area"></div>
-    <video id="local-video" width="10px" height="" muted playsinline pos></video>
+    <video id="local-video" width="100px" height="" muted playsinline pos></video>
+    <button id="videoMuteButton" >Vmute</button>
+    <button id="audioMuteButton" >Amute</button>
+
     <!-- ////////////////////////////s -->
 
 
