--- a/public/index.html
+++ b/public/index.html
@@ -86,17 +86,36 @@
             top: 66px;
             opacity: 0;
         }
+
+        /* 追加webrtc */
         #remote-media-area {
             position: absolute;
-            display: flex;
+            display: flex; 
 
-            width: 84px;
-            height: 84px;
+            /* width: 84px;
+            height: 84px; */
             left: 66px;
             top: 66px;
             margin-left: 100px;
 
         }
+        /* 追加webrtc */
+        .video_wrapper {
+            position: relative;
+            display: inline-block;
+            width: 152px;
+            height: 114.5px;
+            overflow: hidden;
+        }
+        .video_wrapper > video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            min-width: 100%;
+            min-height: 100%;
+        }
+
     </style>
 </head>
 
@@ -117,6 +136,7 @@
     <!-- <script src="/public/move.js"></script>
     <script src="/public/door.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@skyway-sdk/room/dist/skyway_room-latest.js"></script>
+
 
     <!--  ///////////////////////////////////// -->
     <!-- <script src="move.js"></script> -->
